fix anti-cheat visibility detection v4

--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -572,7 +572,7 @@ textarea:focus {
 }
 
 .anticheat-progress {
-    transition: stroke-dasharray 1s ease-linear;
+    transition: stroke-dasharray 0.9s linear;
 }
 
 .anticheat-circle-number {
